...
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <include layout="@layout/empty_item"
            android:id="@+id/layout_empty_list"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_movie_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:scrollbars="vertical"
...
                </LinearLayout>
            </ScrollView>
        </com.facebook.shimmer.ShimmerFrameLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/light_blue"
        android:clickable="true"
        android:focusable="true"
...
