...
            android:layout_marginTop="@dimen/spacing_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipToPadding="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/spacing_16"
            android:text="@string/search" />
...
